# turbo-ros-pkg

./: README.md
iap/: README.md  stack.xml
iap/bayes_filter_ros/: CMakeLists.txt  mainpage.dox  manifest.xml
iap/bayes_filter_ros/src/BayesFilter/: CIFlt.cpp  SIRFlt.cpp  UDFlt.cpp  UdU.cpp  bayesFlt.cpp  bayesFlt.hpp  bayesFltAlg.cpp  covFlt.cpp  infFlt.cpp  infRtFlt.cpp  itrFlt.cpp  matSup.cpp  unsFlt.cpp
iap/bayes_filter_ros/src/QuadCalib/: Jamfile  QuadCalib.cpp  QuadCalib.vcproj
iap/bayes_filter_ros/src/Test/: random.hpp
iap/feature_tracker/: CMakeLists.txt  README.txt  manifest.xml
iap/feature_tracker/config/: feature_tracker_params.yaml
iap/feature_tracker/include/: FeatureTracker.h
iap/feature_tracker/src/: FeatureTracker.cpp
iap/iap_common/: CMakeLists.txt  README.txt  iap_common_lib-config.cmake.in  manifest.xml
iap/iap_common/include/iap_common/cluster/: Cluster.h  ClusterSet.h  ClusterTrajectory.h  ClusterTrajectorySet.h
iap/iap_common/include/iap_common/cluster_generator/: cluster_generator.h
iap/iap_common/include/iap_common/data_logging/: DataLogger.h
iap/iap_common/include/iap_common/image/: image.h  pixel.h
iap/iap_common/include/iap_common/kinematics/: BodyTrajectory.h  BodyTrajectoryPair.h  RigidTransformation.h  kinematics.h
iap/iap_common/include/iap_common/state_pattern/: Status.h
iap/iap_common/include/iap_common/tracker/: FeatureSet.h  FeatureTrajectory.h  FeatureTrajectorySet.h  GlobalDefs.h  Gmm3DSegmentation.h  accumulator.h  blobDetector.h  bottomMaskedFeature.h  closeUpDisplay.h  correlationTracker.h  cubeCornerFeature.h  displayTrack.h  evaluator.h  feature.h  featureDetector.h  hsTracker.h  leftMaskedFeature.h  lkTracker.h  manualDetector.h  repartitioner.h  segmentation.h  shiTomasiDetector.h  stFeature.h  surfDetector.h  surfFeature.h  surfTracker.h  topMaskedFeature.h  tracker.h  trackerListener.h  uniquenessFeatureDetector.h
iap/iap_common/include/iap_common/utils/: Cout.h  MathFunctions.h  iap_definitions.h
iap/iap_common/include/iap_common/video_sensor/: displayVideoSensor.h  imageInStream.h  sensor.h  sensorListener.h  videoSensor.h
iap/iap_common/msg/: AxisMsg.msg  BodyTrajectoryMsg.msg  BodyTrajectoryPairMsg.msg  ClusteredFeatureSet.msg  JointEstimatorResultMsg.msg  JointMsg.msg  KinematicStructureMsg.msg
iap/iap_common/patch/: correspondence_types.patch
iap/iap_common/src/cluster/: Cluster.cpp  ClusterSet.cpp  ClusterTrajectory.cpp  ClusterTrajectorySet.cpp
iap/iap_common/src/cluster_generator/: cluster_generator.cpp
iap/iap_common/src/image/: image.cpp  pixel.cpp
iap/iap_common/src/kinematics/: BodyTrajectory.cpp  BodyTrajectoryPair.cpp  RigidTransformation.cpp  kinematics.cpp
iap/iap_common/src/tracker/: FeatureSet.cpp  FeatureTrajectory.cpp  FeatureTrajectorySet.cpp  Gmm3DSegmentation.cpp  accumulator.cpp  blobDetector.cpp  bottomMaskedFeature.cpp  closeUpDisplay.cpp  correlationTracker.cpp  cubeCornerFeature.cpp  displayTrack.cpp  evaluator.cpp  feature.cpp  hsTracker.cpp  leftMaskedFeature.cpp  lkTracker.cpp  manualDetector.cpp  repartitioner.cpp  segmentation.cpp  shiTomasiDetector.cpp  stFeature.cpp  surfDetector.cpp  surfFeature.cpp  surfTracker.cpp  topMaskedFeature.cpp  tracker.cpp  uniquenessFeatureDetector.cpp
iap/iap_common/src/utils/: Cout.cpp  MathFunctions.cpp
iap/iap_common/src/video_sensor/: displayVideoSensor.cpp  imageInStream.cpp  sensor.cpp  videoSensor.cpp
iap/iap_common/test/: body_trajectory_test.cpp  feature_classes_inout.cpp  feature_classes_test.cpp  feature_cluster_helpers.h  ros_messages_test.cpp
iap/kinematic_analyzer/: CMakeLists.txt  README.txt  manifest.xml
iap/kinematic_analyzer/config/: kinematic_analyzer_params.yaml
iap/kinematic_analyzer/include/kinematic_analyzer/: KinematicAnalyzer.h  KinematicAnalyzerNode.h
iap/kinematic_analyzer/include/kinematic_analyzer/joint/: Joint.h  JointFactory.h  PrismaticJoint.h  RevoluteJoint.h  RigidJoint.h  UncertainJoint.h  UndefinedJoint.h
iap/kinematic_analyzer/include/kinematic_analyzer/joint_estimation/: JointEstimator.h  JointEstimatorResult.h
iap/kinematic_analyzer/src/: KinematicAnalyzer.cpp  KinematicAnalyzerNode.cpp
iap/kinematic_analyzer/src/joint/: Joint.cpp  JointFactory.cpp  PrismaticJoint.cpp  RevoluteJoint.cpp  RigidJoint.cpp  UncertainJoint.cpp  UndefinedJoint.cpp
iap/kinematic_analyzer/src/joint_estimation/: JointEstimator.cpp  JointEstimatorResult.cpp
iap/kinematic_analyzer/src/joint_estimation/feature_based/: FeatureBasedJoint.cpp  FeatureBasedJointEstimator.cpp  FeatureBasedJointFactory.cpp  FeatureBasedPrismaticJoint.cpp  FeatureBasedRevoluteJoint.cpp  FeatureBasedRigidJoint.cpp  FeatureBasedUncertainJoint.cpp  FeatureBasedUndefinedJoint.cpp
iap/kinematic_analyzer/src/joint_estimation/recursive/: RecursiveJoint.cpp  RecursiveJointEstimator.cpp  RecursiveJointFactory.cpp  RecursivePrismaticJoint.cpp  RecursiveRevoluteJoint.cpp  RecursiveRigidJoint.cpp  RecursiveUncertainJoint.cpp  RecursiveUndefinedJoint.cpp
iap/kinematic_analyzer/src/joint_estimation/transformation_based/: TransformationBasedJoint.cpp  TransformationBasedJointEstimator.cpp  (+6 more)
iap/kinematic_analyzer/test/: kinematic_analyzer_test.cpp  ros_messages_test.cpp
iap/visual_net/: CMakeLists.txt  Makefile  README.txt  manifest.xml
iap/visual_net/config/: visual_net_params.yaml
iap/visual_net/include/visual_net/: VisualNet.h  VisualNetNode.h
iap/visual_net/libs/: Makefile
iap/visual_net/libs/imagelib/: fmatrix.c  homography.c  image.c  image.h  triangulate.c
iap/visual_net/libs/matrix/: Makefile  matrix.c
iap/visual_net/libs/sba-1.5/: sba_levmar.c  sba_levmar_wrap.c
iap/visual_net/libs/sfm-driver/: sfm.c
iap/visual_net/src/visual_net/: VisualNet.cpp  VisualNetNode.cpp
rviz-plugin-selected-points-topic/: CMakeLists.txt  package.xml  plugin_description.xml  readme.txt  test_selection.rviz
rviz-plugin-selected-points-topic/include/selected_points_publisher/: SelectedPointsPublisher.h
rviz-plugin-selected-points-topic/src/: SelectedPointsPublisher.cpp  selected_points_topic.cpp  selected_points_topic.h
(+148 files in other folders)
